--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,7 @@ RUN npm run build --prod
 
 FROM nginx:stable-perl
 COPY --from=build /front/dist/frontend/browser /usr/share/nginx/html
-COPY /nginx/nginx.conf /etc/nginx/nginx.conf
+COPY /nginx/nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 CMD [ "nginx", "-g", "daemon off;" ]
