--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
       - "8080:8080"
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
+    volumes:
+      - ./backend/:/src
     networks:
       - app-network
     depends_on:
@@ -19,6 +21,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "4200:80"
+    volumes:
+      - ./frontend/:/src
     networks:
       - app-network
   db:
