--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,6 +5,9 @@ COPY *.csproj ./
 RUN dotnet restore
 
 COPY . ./
+
+RUN find . -type f -name '*.dev.*' -exec bash -c 'mv "$0" "${0/.dev./.}"' {} \;
+
 RUN dotnet publish -c Release -o out
 
 # Run migrations
