--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -10,11 +10,13 @@
     <PackageReference Include="Aspose.Cells" Version="25.1.2" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.12" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.12">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
     <PackageReference Include="NPOI" Version="2.7.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
@@ -22,8 +24,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="resources\floors\" />
-    <Folder Include="resources\reports\" />
+    <Folder Include="wwwroot\resources\floors\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\resources\offices\office1.jpg" />
+    <None Include="wwwroot\resources\offices\office2.jpeg" />
+    <None Include="wwwroot\resources\offices\office3.jpg" />
+    <None Include="wwwroot\resources\reports\Отчет_Бизнес-центр_Сити_20250206_12_08.xlsx" />
+    <None Include="wwwroot\resources\reports\Отчет_Бизнес-центр_Сити_20250206_12_09.xlsx" />
+    <None Include="wwwroot\resources\reports\Отчет_Бизнес-центр_Сити_20250207_1141.xlsx" />
   </ItemGroup>
 
 </Project>
