--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\resources\floors\**" />
+    <Content Remove="wwwroot\resources\floors\**" />
+    <EmbeddedResource Remove="wwwroot\resources\floors\**" />
+    <None Remove="wwwroot\resources\floors\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Aspose.Cells" Version="25.1.2" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.12" />
@@ -24,22 +31,15 @@
   </ItemGroup>
 
   <ItemGroup>
-<<<<<<< HEAD
-    <Folder Include="wwwroot\resources\floors\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <Folder Include="wwwroot\resources\floor\" />
     <None Include="wwwroot\resources\offices\office1.jpg" />
     <None Include="wwwroot\resources\offices\office2.jpeg" />
     <None Include="wwwroot\resources\offices\office3.jpg" />
     <None Include="wwwroot\resources\reports\Отчет_Бизнес-центр_Сити_20250206_12_08.xlsx" />
     <None Include="wwwroot\resources\reports\Отчет_Бизнес-центр_Сити_20250206_12_09.xlsx" />
     <None Include="wwwroot\resources\reports\Отчет_Бизнес-центр_Сити_20250207_1141.xlsx" />
-=======
     <Folder Include="resources\floors\" />
     <Folder Include="resources\reports\" />
-    <Folder Include="wwwroot\" />
->>>>>>> dev
   </ItemGroup>
 
 </Project>
