--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -7,9 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="resources\**" />
     <Compile Remove="wwwroot\resources\floors\**" />
+    <Content Remove="resources\**" />
     <Content Remove="wwwroot\resources\floors\**" />
+    <EmbeddedResource Remove="resources\**" />
     <EmbeddedResource Remove="wwwroot\resources\floors\**" />
+    <None Remove="resources\**" />
     <None Remove="wwwroot\resources\floors\**" />
   </ItemGroup>
 
@@ -38,8 +42,6 @@
     <None Include="wwwroot\resources\reports\Отчет_Бизнес-центр_Сити_20250206_12_08.xlsx" />
     <None Include="wwwroot\resources\reports\Отчет_Бизнес-центр_Сити_20250206_12_09.xlsx" />
     <None Include="wwwroot\resources\reports\Отчет_Бизнес-центр_Сити_20250207_1141.xlsx" />
-    <Folder Include="resources\floors\" />
-    <Folder Include="resources\reports\" />
   </ItemGroup>
 
 </Project>
