--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -35,18 +36,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\resources\floors\" />
     <Folder Include="wwwroot\resources\floor\" />
     <Folder Include="wwwroot\resources\reports\" />
     <None Include="wwwroot\resources\offices\office1.jpg" />
     <None Include="wwwroot\resources\offices\office2.jpeg" />
     <None Include="wwwroot\resources\offices\office3.jpg" />
-    <None Include="wwwroot\resources\reports\Отчет_Бизнес-центр_Сити_20250206_12_08.xlsx" />
-    <None Include="wwwroot\resources\reports\Отчет_Бизнес-центр_Сити_20250206_12_09.xlsx" />
-    <None Include="wwwroot\resources\reports\Отчет_Бизнес-центр_Сити_20250207_1141.xlsx" />
-    <Folder Include="resources\floors\" />
-    <Folder Include="resources\reports\" />
-    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
